Stopped scrollbar from appearing on link wobble.

--- a/main.css
+++ b/main.css
@@ -211,6 +211,7 @@ body
     margin-right: auto;
     
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .content p
